csi-ceph/test-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: websvc
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: websts
spec:
  serviceName: web
  selector:
    matchLabels:
      app: web
  replicas: 3
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "qxis-cephblock"
      resources:
        requests:
          storage: 1Gi
