csi-ceph/9_ceph-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard
  namespace: ceph
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: http://10.240.1.30
spec:
  rules:
  - host: ceph-dash.qxis-dev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: default
            port:
              number: 80
